# qr-access

./: .env  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 764bda187091_initialize_models.py
backend/app/api/: deps.py  main.py
backend/app/api/guardian/domain/: guardian_models.py
backend/app/api/role/domain/: role_aggregate_root.py  role_models.py
backend/app/api/role/repository/http/: role_routers.py
backend/app/api/shared/aggregate/: aggregate_root.py
backend/app/api/shared/aggregate/domain/: aggregate_root.py
backend/app/api/shared/aggregate/domain/repository/: aggregate_root_repository.py  async_aggregate_root_repository.py  dict_aggregate_root_repository.py  in_memory_aggregate_root_repository.py
backend/app/api/shared/domain/: document_type.py
backend/app/api/student/application/: student_services.py
backend/app/api/student/domain/: student_models.py
backend/app/api/student/infrastructure/http/: student_routers.py
backend/app/api/user/application/: auth_service.py  auth_services.py
backend/app/api/user/domain/: auth_models.py  user.py  user_aggregate_root.py  user_models.py
backend/app/api/user/infrastructure/http/: user_router.py  user_routers.py
backend/app/api/user/infrastructure/http/auth/: auth_routers.py
backend/app/api/user/infrastructure/http/user/: user_routers.py
backend/app/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh
frontend/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  (+2 more)
(+26 files in other folders)
